- Changed ident handling to ignore encrypted pidentd responses
- Added oper access flags for umodes ydb
- Added string probability calculation to RWHO
- Added automatic rejection of certain proxy types
- Added local storage system for klines, making UNKLINE work as expected
- Upgraded zlib to 1.2.3
- Return an error on +R send to -r clients

- Reworked memory accounting:
    stats z  shows short summary
    stats Z  shows detailed reports
    MEMTRACE define in config.h to debug memory leaks, adds to Z report

- Changed general connection reporting format to reduce ambiguity
  (affects stats L, trace, etc):
    servers:  name[host]
    clients:  nick!user@host
    unknown:  name([F]ident@host)
      where name is a nick or "<unnamed>"
      where F is:
        ?  identd lookup in progress
        +  valid identd response
        -  no identd response (ident is "unknown")

- Reworked m_message().  Behavior changes:
    - corrected error responses
    - error responses only sent for PRIVMSG, not NOTICE
    - #hostmask target support removed
    - no wildcard restrictions on $servermask target
    - $$servermask target is now identical to $servermask
    - U:lined clients talk through SILENCE
    - RPL_AWAY response sent by sender's server, not recipient's
    - services-related behavior controlled by config.h
      (PASS_SERVICES_MSGS, SUPER_TARGETS_ONLY)

- Server protocol changes:
    Shortform commands are used for non-ULined links
      NS CS MS RS OS HS SS


Changes for 1.8.3
-----------------

- Fixed rehash bug with specific conf changes that caused memory
  corruption and crashes
- Fixed a possible buffer overflow issue in oper hostmasking
- Fixed solaris devpoll socket engine logic problems.
- Fixed class reference counting errors.
- Fixed a bug with cmode +j propagation on resync
- Added a second set of join counters to send warning notices
  to +d opers when the default thresholds are met.  Still sends
  a throttle notice when cmode +j thresholds are met.